--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "1.1.3",
     "cheerio": "0.20.0",
+    "commander": "2.9.0",
     "debug": "2.2.0",
-    "nedb": "1.8.0",
+    "inquirer": "1.0.3",
+    "minimist": "1.2.0",
+    "ora": "0.2.3",
     "request": "2.72.0",
     "request-promise": "3.0.0"
+  },
+  "preferGlobal": "true",
+  "directories": {
+    "bin": "./bin"
+  },
+  "bin": {
+    "packtpub-free": "bin/packtpub-free"
   }
 }
